tests/neg/indent-colons.check
-- Error: tests/neg/indent-colons.scala:7:4 ----------------------------------------------------------------------------
7 |    :  // error
  |    ^
  |    end of statement expected but ':' found
-- Error: tests/neg/indent-colons.scala:13:2 ---------------------------------------------------------------------------
13 |  :  // error
   |  ^
   |  end of statement expected but ':' found
-- Error: tests/neg/indent-colons.scala:20:2 ---------------------------------------------------------------------------
20 |  :  // error
   |  ^
   |  end of statement expected but ':' found
-- [E018] Syntax Error: tests/neg/indent-colons.scala:27:14 ------------------------------------------------------------
27 |  val y = 1 + : // error
   |              ^
   |              expression expected but [31m:[0m found
   |
   | longer explanation available when compiling with `-explain`
-- [E018] Syntax Error: tests/neg/indent-colons.scala:31:27 ------------------------------------------------------------
31 |  val all = credentials ++ :  // error
   |                           ^
   |                           expression expected but [31m:[0m found
   |
   | longer explanation available when compiling with `-explain`
-- [E134] Type Error: tests/neg/indent-colons.scala:24:12 --------------------------------------------------------------
24 |  val x = 1.+ :  // error
   |          ^^^
   |          None of the overloaded alternatives of method + in class Int with types
   |           (x: Double): Double
   |           (x: Float): Float
   |           (x: Long): Long
   |           (x: Int): Int
   |           (x: Char): Int
   |           (x: Short): Int
   |           (x: Byte): Int
   |           (x: String): String
   |          match expected type (2 : Int)
-- [E006] Not Found Error: tests/neg/indent-colons.scala:33:7 ----------------------------------------------------------
33 |    if file.isEmpty  // error
   |       ^^^^
   |       Not found: file
   |
   | longer explanation available when compiling with `-explain`
-- [E006] Not Found Error: tests/neg/indent-colons.scala:35:13 ---------------------------------------------------------
35 |    else Seq(file) // error
   |             ^^^^
   |             Not found: file
   |
   | longer explanation available when compiling with `-explain`
-- [E178] Type Error: tests/neg/indent-colons.scala:5:2 ----------------------------------------------------------------
5 |  tryEither:  // error
  |  ^^^^^^^^^
  |  missing argument list for method tryEither
  |
  |    def tryEither[T](x: T)(y: Int => T): T
  |
  |  where:    T is a type variable
  |
  | longer explanation available when compiling with `-explain`
-- [E178] Type Error: tests/neg/indent-colons.scala:11:2 ---------------------------------------------------------------
11 |  tryEither:  // error
   |  ^^^^^^^^^
   |  missing argument list for method tryEither
   |
   |    def tryEither[T](x: T)(y: Int => T): T
   |
   |  where:    T is a type variable
   |
   | longer explanation available when compiling with `-explain`
-- [E178] Type Error: tests/neg/indent-colons.scala:18:2 ---------------------------------------------------------------
18 |  Some(3).fold:  // error
   |  ^^^^^^^^^^^^
   |  missing argument list for method fold in class Option
   |
   |    final def fold[B](ifEmpty: => B)(f: A => B): B
   |
   | longer explanation available when compiling with `-explain`
